<resources>
    <string name="app_name">MyfirstTap</string>
    <string name="enter_name">enter name</string>
    <string name="enterpwd">enter password</string>
    <string name="login">login</string>
    <string name="cancel">cancel</string>
    <string name="spinner_title">select your language</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Basic calculator</string>
    <string name="menu_gallery">Scientific</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="channel_name">abduls channel</string>
    <string name="channel_description">abduls channel description</string>
</resources>